@@ -1266,7 +1266,7 @@ class User {
 	 *                    done against master.
 	 */
 	private function getBlockedStatus( $bFromSlave = true ) {
-		global $wgProxyWhitelist, $wgUser;
+		global $wgProxyWhitelist, $wgUser, $wgApplyIpBlocksToXff;
 
 		if ( -1 != $this->mBlockedby ) {
 			return;
@@ -1309,6 +1309,46 @@ class User {
 				$block->setBlocker( wfMessage( 'sorbs' )->text() );
 				$block->mReason = wfMessage( 'sorbsreason' )->text();
 				$block->setTarget( $ip );
+			}
+		}
+
+		# (bug 23343) Apply IP blocks to the contents of XFF headers, if enabled
+		if ( !$block instanceof Block && $ip !== null && $wgApplyIpBlocksToXff ) {
+			$xForwardedFor = $this->getRequest()->getHeader( 'X-Forwarded-For' );
+			if ( $xForwardedFor !== false ) {
+				$ipchain = array_map( 'trim', explode( ',', $xForwardedFor ) );
+				$checkips = array();
+				foreach ( $ipchain as $xffIP ) {
+					# Discard invalid IP addresses. Since XFF can be spoofed and we do not
+					# necessarily trust the header given to us, make sure that we are only
+					# checking for blocks on well-formatted IP addresses (IPv4 and IPv6).
+					# Do not treat private IP spaces as special as it may be desirable for wikis
+					# to block those IP ranges in order to stop misbehaving proxies that spoof XFF.
+					if ( $xffIP === $ip || !IP::isValid( $xffIP ) ) {
+						continue;
+					}
+					$checkips[] = $xffIP;
+				}
+				if ( count( $checkips ) > 0 ) {
+					if ( $bFromSlave ) {
+						$db = wfGetDB( DB_SLAVE );
+					} else {
+						$db = wfGetDB( DB_MASTER );
+					}
+					$result = $db->select( 'ipblocks', '*',
+						array( 'ipb_address' => $checkips, 'ipb_anon_only' => 0 ),
+						__METHOD__, array( 'LIMIT' => 1 ) );
+					if( $result->numRows() > 0 ) {
+						$xffBlock = Block::newFromRow( $result->fetchObject() );
+						if ( $xffBlock instanceof Block ) {
+							# We found a match, so apply this particular block
+							# Also mangle the reason to alert the user that the block
+							# originated from matching the X-Forwarded-For header.
+							$block = $xffBlock;
+							$block->mReason = wfMessage( 'xffblockreason', $block->mReason )->text();
+						}
+					}
+				}
 			}
 		}
 
